# viergewinnt_jomandre

./: Board.cpp  Board.h  Bot.cpp  Bot.h  CMakeLists.txt  HorizontalBot.cpp  HorizontalBot.h  HumanPlayer.cpp  HumanPlayer.h  Misc.cpp  Misc.h  Player.cpp  Player.h  RandomBot.h  SmartBot.cpp  SmartBot.h  VerticalBot.h  main.cpp
Board/: Board.cpp  Board.h  BoardTester.h
Player/: Player.cpp  Player.h
Player/Bot/: Bot.h  HorizontalBot.cpp  HorizontalBot.h  RandomBot.cpp  RandomBot.h  SmartBot.cpp  SmartBot.h  VerticalBot.cpp  VerticalBot.h
Player/HumanPlayer/: HumanPlayer.cpp  HumanPlayer.h
Utils/: Color.h  Misc.h  Option.h  StackVec.h  UniqueObject.h
